[gd_scene load_steps=8 format=3 uid="uid://ds6n5ocl2e2b8"]

[ext_resource type="Script" path="res://scripts/settings_menu_in_game.gd" id="1_g0rbq"]
[ext_resource type="Texture2D" uid="uid://c207tgfou1jiv" path="res://assets/background/PauseMenuBackgroundResized.png" id="2_bf2or"]
[ext_resource type="FontFile" uid="uid://bmvw53x0yedhc" path="res://assets/fonts/HomeVideo-BLG6G.ttf" id="3_3ok6k"]
[ext_resource type="Script" path="res://scripts/exit_settings.gd" id="4_vov6v"]

[sub_resource type="Gradient" id="Gradient_11rlm"]
colors = PackedColorArray(0.929412, 0.458824, 0.466667, 1, 0.2, 0.32549, 0.415686, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hois5"]
gradient = SubResource("Gradient_11rlm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5gfeg"]
texture = SubResource("GradientTexture2D_hois5")

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g0rbq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
offset_right = 1817.0
offset_bottom = 1037.0
texture = ExtResource("2_bf2or")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -277.0
offset_right = 296.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5gfeg")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 582.0
offset_bottom = 359.0
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.956863, 0.752941, 1)
theme_override_colors/font_shadow_color = Color(0.0313726, 0.0862745, 0.192157, 1)
theme_override_fonts/font = ExtResource("3_3ok6k")
theme_override_font_sizes/font_size = 60
text = "== SETTINGS =="
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 56

[node name="SFX" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0.917647, 0.513726, 0.623529, 1)
theme_override_colors/font_color = Color(0.980392, 0.956863, 0.752941, 1)
theme_override_fonts/font = ExtResource("3_3ok6k")
theme_override_font_sizes/font_size = 35
button_pressed = true
text = " SFX"

[node name="MarginContainer2" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_bottom = 39

[node name="Music" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.917647, 0.513726, 0.623529, 1)
theme_override_colors/font_color = Color(0.980392, 0.956863, 0.752941, 1)
theme_override_fonts/font = ExtResource("3_3ok6k")
theme_override_font_sizes/font_size = 35
button_pressed = true
text = " Music"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="Save" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.917647, 0.513726, 0.623529, 1)
theme_override_colors/font_color = Color(0.980392, 0.956863, 0.752941, 1)
theme_override_fonts/font = ExtResource("3_3ok6k")
theme_override_font_sizes/font_size = 35
text = "   Save   "

[node name="Spacer1" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Spacer1"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 50

[node name="Load" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.917647, 0.513726, 0.623529, 1)
theme_override_colors/font_color = Color(0.980392, 0.956863, 0.752941, 1)
theme_override_fonts/font = ExtResource("3_3ok6k")
theme_override_font_sizes/font_size = 35
text = "   Load   "

[node name="Spacer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer/Spacer2"]
layout_mode = 2

[node name="Controls" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.917647, 0.513726, 0.623529, 1)
theme_override_colors/font_color = Color(0.980392, 0.956863, 0.752941, 1)
theme_override_fonts/font = ExtResource("3_3ok6k")
theme_override_font_sizes/font_size = 35
text = "Controls / KEY Bindings"

[node name="Spacer3" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer/Spacer3"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Resume" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.917647, 0.513726, 0.623529, 1)
theme_override_colors/font_color = Color(0.980392, 0.956863, 0.752941, 1)
theme_override_fonts/font = ExtResource("3_3ok6k")
theme_override_font_sizes/font_size = 35
text = "Resume"
script = ExtResource("4_vov6v")

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MainMenu" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.917647, 0.513726, 0.623529, 1)
theme_override_colors/font_color = Color(0.980392, 0.956863, 0.752941, 1)
theme_override_fonts/font = ExtResource("3_3ok6k")
theme_override_font_sizes/font_size = 35
text = "MAIN MENU"
script = ExtResource("4_vov6v")

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/MarginContainer/Resume" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer3/HBoxContainer/MarginContainer/MainMenu" to="." method="_on_main_menu_pressed"]
